# MyIsaac

./: CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  notes.txt
example/: build.bat  build.sh  game_state_mainmenu.cpp  game_state_mainmenu.hpp
example/src/: main.cpp
include/: application.hpp  engine.hpp  game_state_base.hpp  game_state_manager.hpp  physics_engine.hpp  resource_manager.hpp  sprite.hpp  ssge.hpp  vector2.hpp
include/Game States/: game_state_base.hpp  game_state_mainmenu.hpp
include/Math/: rect.hpp
include/UI/: ui_button.hpp  ui_drawable_element.hpp  ui_element.hpp  ui_image.hpp
src/: application.cpp  engine.cpp  game_state_manager.cpp  main.cpp  physics_engine.cpp  resource_manager.cpp  sprite.cpp  vector2.cpp
src/Game States/: game_state_mainmenu.cpp
src/UI/: ui_button.cpp  ui_element.cpp  ui_image.cpp
